# FF1-Test

./: FF1 Notebook.ipynb  Fast_F1.ipynb  main.py  pyproject.toml
cache/: fastf1_http_cache.sqlite
cache/2021/2021-03-28_Bahrain_Grand_Prix/2021-03-28_Race/: session_status_data.ff1pkl  timing_app_data.ff1pkl  timing_data.ff1pkl  track_status_data.ff1pkl  weather_data.ff1pkl
cache/2021/2021-04-18_Emilia_Romagna_Grand_Prix/2021-04-18_Race/: session_status_data.ff1pkl  timing_app_data.ff1pkl  timing_data.ff1pkl  track_status_data.ff1pkl  weather_data.ff1pkl
cache/2021/2021-05-02_Portuguese_Grand_Prix/2021-05-02_Race/: session_status_data.ff1pkl  timing_app_data.ff1pkl  timing_data.ff1pkl  track_status_data.ff1pkl  weather_data.ff1pkl
cache/2021/2021-05-09_Spanish_Grand_Prix/2021-05-09_Race/: session_status_data.ff1pkl  timing_app_data.ff1pkl  timing_data.ff1pkl  track_status_data.ff1pkl  weather_data.ff1pkl
cache/2021/2021-05-23_Monaco_Grand_Prix/2021-05-23_Race/: session_status_data.ff1pkl  timing_app_data.ff1pkl  timing_data.ff1pkl  weather_data.ff1pkl
cache/2021/2021-06-06_Azerbaijan_Grand_Prix/2021-06-06_Race/: session_status_data.ff1pkl  timing_app_data.ff1pkl  timing_data.ff1pkl  track_status_data.ff1pkl  weather_data.ff1pkl
cache/2021/2021-06-20_French_Grand_Prix/2021-06-20_Race/: session_status_data.ff1pkl  timing_app_data.ff1pkl  timing_data.ff1pkl  track_status_data.ff1pkl  weather_data.ff1pkl
cache/2021/2021-06-27_Styrian_Grand_Prix/2021-06-27_Race/: session_status_data.ff1pkl  timing_app_data.ff1pkl  timing_data.ff1pkl  track_status_data.ff1pkl  (+1 more)
(+40 files in other folders)
